# mediagram

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build-container.py  build-container.sh  docker-compose.yml  get-code.sh  pyproject.toml  run-container.py
.github/workflows/: ci.yml
src/mediagram/: __init__.py  cli.py  config.py  hookspecs.py  main.py  media.py  plugins.py  telegram.py  tool.py
src/mediagram/agent/: __init__.py  callbacks.py  commands.py  tools.py
src/mediagram/agent/tools/: __init__.py  assemblyai.py  filesystem.py  http.py  llm.py  media.py  respond.py  sleep.py
src/mediagram/builtins/: __init__.py  filesystem_tools.py  sleep_tool.py
src/mediagram/driver/: __init__.py  cli.py  telegram.py
src/mediagram/driver/telegram/: __init__.py  driver.py  file_sender.py  html.py
src/mediagram/mgtools/: __init__.py  ffmpeg_wrapper.py  yt_dlp_wrapper.py
src/mediagram/prompts/: system.md
tests/: test_agent.py  test_agent_loop.py  test_agent_utils.py  test_cli.py  test_command.py  test_command_handlers.py  test_command_router.py  test_filesystem_tools.py  test_http_tool.py  test_media.py  test_telegram_html.py  test_tool_decorator.py
