[project]
name = "mediagram"
version = "0.1.0"
description = "Telegram assistant for online media"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm>=0.27.1",
    "llm-anthropic>=0.21.1",
    "mistune>=3.1.4",
    "pluggy>=1.5.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "typer>=0.20.0",
]

[project.scripts]
mediagram = "mediagram.main:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
